<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="?layoutBackground"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="?textTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="@string/about_us_title" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        style="?textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/app_overall_title" />

    <TextView
        style="?textCaption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:justificationMode="inter_word"
        android:paddingBottom="8dp"
        android:text="@string/app_overall" />

    <TextView
        style="?textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/app_purpose_title" />

    <TextView
        style="?textCaption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:justificationMode="inter_word"
        android:paddingBottom="8dp"
        android:text="@string/app_purpose" />

    <TextView
        style="?textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/app_help_title" />

    <TextView
        style="?textCaption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:justificationMode="inter_word"
        android:paddingBottom="8dp"
        android:text="@string/app_help" />
</LinearLayout>