<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="?layoutBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="?textTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="@string/feedback_title"
            app:titleTextAppearance="@style/textTitle"
            app:titleTextColor="@color/whiteText" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/source_sans_pro"
        android:paddingBottom="4dp"
        android:text="@string/feedback_caption"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <androidx.cardview.widget.CardView
        style="?cardBackground"
        android:layout_width="match_parent"
        android:layout_margin="12dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="vertical">
            <TextView
                style="?textMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/subject_label" />

            <EditText
                android:id="@+id/subject"
                style="?textCaption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:autofillHints=""
                android:cursorVisible="true"
                android:hint="@string/subject_hint"
                android:inputType="textMultiLine|textEmailSubject"
                android:maxLines="2" />

            <TextView
                style="?textMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/feedback_label" />

            <EditText
                android:id="@+id/feedback"
                style="?textCaption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:autofillHints=""
                android:cursorVisible="true"
                android:gravity="top"
                android:hint="@string/feedback_hint"
                android:inputType="textMultiLine|textCapSentences"
                android:lines="15" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/submit_feedback"
        style="?textMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="?buttonBackground"
        android:text="@string/submit_button" />
</LinearLayout>